# trackDLO

./: .gitignore  .gitmodules  LICENSE  README.md  SETUP.md  TODO.md  pyrightconfig.json  requirements.txt
app/: app_acquireDataSet.py  app_acquireStereoDataSets.py  app_acquireStereoDataSetsAndRobotPose.py  app_closeRobotGripper.py  app_determineHSVFilterValues.py  app_determinePointCloudSize.py  app_determineROIFor2DImage.py  app_loadPickle.py  app_printRobotPose.py  app_save_ply_as_txt.py  app_showImage.py  app_topologyRectonstructionFromPointCloud.py
config/calibration/: calibrationParameters.json  cameraParameters.json
datageneration/: plotDataGeneration_pathLengthMinimalSpanningTree.py  topologyBasedCorrespondanceEstimation_testDataGeneration.py  topologyExtraction_testdata_generation.py
eval/20230508_cameraSettings/: evalCameraSettings.py
eval/20230509_ManipulationSequence_ArenaWireHarenss_Manual/: evalManipulationSequence.py
eval/20230509_dataAcquisiton/: evalDataAcquisiton.py  evalPipeLine.py
eval/20230509_pipeLine/: evalPipeLine.py
eval/cameraParameters/: evalCameraSettings.py
eval/graspingAccuracy/: computeRuntimes.py  evalGraspingAccuracy.py  (+13 more)
experimental/: exp._useDartForIK.py  exp_acquireImgData.py  exp_dartAppendDLOs.py  exp_deformationJacobian.py  exp_extractBDLOPointCloudFromCameraData.py  exp_filterBackground.py  exp_frangiFilter.py  exp_importBDLOModel.py  exp_importJsonFile.py  exp_loadImgData.py  exp_outlierFiltering.py  exp_plotDisparityMap.py  exp_saveAndLoadDisparityMapAsTIF.py  exp_scipyVSNumpyCorrespondanceMatrix.py  exp_scipyVSNumpyDistanceMatrix.py  exp_skeletonizationMask.py  exp_sympyRotations.py  exp_topologyReconstructionFromPointCloud.py
plot/: plotBFS.py  plotContinuousModelConfigurations.py  plotContinuousRepresentation_Helix.py  plotContinuousVsDiscreteConfigurations.py  plotGaussianMixtureModelExample.py  plotImageProcessing_backgroundSubtraction.py  plotImageProcessing_colorFilter.py  plotImageProcessing_roiFilter.py  plotL1.py  plotLLEExample.py  plotMinSpanTree_CartesianVsPathLength.py  plotNeighborhoodMinimalSpanningTree.py  plotPCAVsSkeletonRepresentation.py  plotPointSets.py  plotSOM.py  plotStereoProjection.py  printExtrinsicEulerRotationMatrix.py  printWakamatsuRotationMatrix.py  reconstructContinousRepresentation_Helix.py  reconstructHelix.py
script/: crop_image_batch.sh  crop_image_bottom.sh  script_compress_tif.py  script_convert_npy_to_tif.py  script_copyNthFrameToLabelDir.py  script_printEveryNthFileNameFromFolder.py  script_save_ply_as_txt.py  script_zip_folder.sh
src/robot/: CMakeLists.txt  franka.py
src/robot/pythonBindings/: CMakeLists.txt  libfranka_bindings.cpp  pypanda.cpp  robotBindings.cpp  robot_bindings.cpp
src/robot/src/: CMakeLists.txt  dampedInverseKinematics.cpp  dampedInverseKinematics.h  highLevelControl.cpp  highLevelControl.h  inverseKinematics.cpp  inverseKinematics.h  lowLevelControl.cpp  lowLevelControl.h  motion.cpp  motion.h  motionProfile.h  sevenPhaseProfile.cpp  sevenPhaseProfile.h  trajectory.cpp  trajectory.h  trajectoryParameters.h  trajectoryStruct.h  zeroSpaceInverseKinematics.cpp  zeroSpaceInverseKinematics.h
testScripts/: exp_scipyVSNumpyCorrespondanceMatrix.py
tests/: 3DCurveShapes_test.py  bdloLocalization_test.py  bdloReconstruction_test.py  bdlo_test.py  calculateArcLength_test.py  cameraInterface_test.py  cameraModel_test.py  continuousReconstruction_test.py  dartVisualizer_test.py  dataAcquisition_test.py  dataHandler_test.py  deformationJacobian_test.py  diffGeometryReconstruction_test.py  discreteReconstruction_test.py  discretization_test.py  dlo_test.py  evaluation_test.py  finiteSegmentModel_test.py  forceUpdate_test.py  frankaEmikaPanda_test.py  imageProcessing_test.py  knn_test.py  l1Median_test.py  loadPandaRobot_test.py  minimalSpanningTreeTopology_test.py  mlle_test.py  plotCoordinateSystems_test.py  pointCloudProcessing_test.py  preProcessing_test.py  pycpd_test.py  pyjspr_test.py  pykpr4BDLO_test.py  pykpr_test.py  pyspr_test.py  pysprb_test.py  sensorModel_test.py  som_test.py  testDartpy.py  test_bdlo.py  test_knn.py  (+9 more)
(+278 files in other folders)
